--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,22 @@
 <% include ./partials/header %>
-<h1>Login</h1>
+<div class="container">
+    <div class="row">
+        <h1 style="text-align:center">Login</h1>
+        <div style="width:30%; margin: 25px auto">
+            <form method="POST" action="/login">
+                <div class="form-group">
+                    <input type="text" class="form-control" name="username" placeholder="username">
+                </div>
 
-<form method="POST" action="/login">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <input type="submit" value="Login">
-</form>
+                <div class="form-group">
+                     <input type="password" class="form-control" name="password" placeholder="password">
+                </div>
+                <div class="form-group">
+                     <button class="btn btn-large btn-default btn-block btn-primary">Login</button>
+                </div>
+            </form>
+            <a href="/campgrounds">Go Back</a>
+        </div>
+    </div>
+</div>
 <% include ./partials/footer %>
