--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,5 +1,12 @@
 <% include partials/header %>
-<h1>Welcome to YelpCamp!</h1>
+<link rel="stylesheet" href="/stylesheets/landing.css">
+<div class="container">
+		<div style="text-align: center; padding-top: 10%">
+			<h1>YelpCamp</h1>
+			<h3>Start planning your next trip today!</h3>
+			<hr>
+			<a href="/campgrounds" class="btn btn-default btn-lg"><span class="glyphicon glyphicon-tree-conifer"></span> Get Started!</a>
+		</div>
+	</div>
 
-<a href="/campgrounds">Click here to go to campgrounds page!</a>
 <% include partials/footer %>
